--- a/k8s_manifests/frontend-deployment.yaml
+++ b/k8s_manifests/frontend-deployment.yaml
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: public.ecr.aws/e3i3d3z5/three-tier-frontend-d:latest
+        image: 767397985496.dkr.ecr.us-east-1.amazonaws.com/ecrrepo02:latest
         imagePullPolicy: Always
         env:
           - name: REACT_APP_BACKEND_URL
